# sps

./: .clang-format  .gitignore  AlignedMemoryTest.h  Assert.h  BipBuffer.h  CMakeLists.txt  README.md  RingBuffer_test.cpp  RingBuffer_v1.hpp  algorithm  align.h  align.hpp  align_test.cpp  align_test.hpp  aligned.hpp  aligned2.hpp  aligned_allocator.hpp  aligned_allocator_test.cpp  aligned_array.hpp  aligned_array_test.cpp  aligned_unique_test.cpp  alignexp.cpp  alloc_test.cpp  allocator_test.cpp  array_helper.hpp  b.cpp  bitmanip.h  bitswitch.hpp  bitswitch_test.cpp  bugs.cpp  bugs0.cpp  c98.hpp  cenv.h  cerr.h  cmath  config.h.in  context.cpp  context.hpp  context_test.cpp  contextif.hpp  (+113 more)
Dewhurst/: crtp_components.h  main.cpp  mainCRTP.cpp  number.h  pred_expr.h  pred_expr_traits.h  shape.h  stl_iterator_traits.h  writeonly.h
cl/: ocl_common.h
cmake/: FindFFTW.cmake  PrintTargetProperties.cmake  ValidateHeaders.cmake  gtest_macros.cmake  simd.cmake  utils.cmake
qt/: CMakeLists.txt  ConsoleReader.cpp  ConsoleReader.h  ConsoleReaderMain.cpp  aspectwidget.cpp  aspectwidget.hpp  emit_if.hpp  emit_impl.cpp  emit_impl.hpp  thread_demo.cpp  thread_demo.h
signals/: basic_demo.cpp  cross_thread_calls.cpp  demo.cpp  tests.cpp  track_objects.cpp
unix/: memory
win32/: magic_ring.cpp  memory  strace.hpp  strace.txt
